Examples/test-suite/errors/pp_unknowndirective5.stderr
pp_unknowndirective5.i:18: Error: Syntax error in input(1).
